fix: navbar not clickable on mobile devices

--- a/styles/scss/components/_header.scss
+++ b/styles/scss/components/_header.scss
@@ -50,6 +50,7 @@
 
   &__controls {
     position: fixed;
+    z-index: 5;
     top: 0;
     left: 0;
     width: 100%;
